2001-06-03  Juan Pablo Mendoza Mendoza <pablo_juan@yahoo.com>

	* gnomine.c (main): Don't try to free the gnome_master_client to
	  silent a gtk warning on exit.
	* minefield.c (gtk_minefield_motion_notify): Don't do anything if
	  x/y passes the minefiled boundarys, to a fix crash bug.

2000-05-12  andreas Hyden  <a.hyden@cyberpoint.se>

	* gnomine.desktop: Added Swedish translation.

2000-05-06  Karl Eichwalder  <ke@suse.de>

	* gnomine.desktop: Improve de.

1999-03-12  Ian Peters  <itp@gnu.org>

	* gnomine.c (about): Now can only create one about dialog, which is
	set_parented to the main window

1999-03-12  Ian Peters  <itp@gnu.org>

	* gnomine.c (lots of stuff): Moved gnomine to use a propbox for
	configuration.

1999-02-13  Ian Peters  <ipeters@acm.org>

	* gnomine.c (verify_ranges): Fixed a coding typo - it was checking the
	xsize twice, instead of the xsize and the ysize in a custom board.

1999-02-06  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnomine.c (about): Fixed a Fundation -> Foundation typo and
	copyright date.

1999-01-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnomine.c: Kill file menu.

1999-01-09  Nat Friedman  <nat@nat.org>

	* gnomine.c (main): Install an appbar.  Setup menu hints.  Not
 	quite working.

	Standardized the menus.

1999-01-01  Callum McKenzie <callum@physics.otago.ac.nz>

      * gnomine.c (marks_changed): Call gtk_clock_start.
1999-01-02  Callum McKenzie  <callum@physics.otago.ac.nz>

      * minefield.c: Resizing now works properly. All public functions
      check their arguments.
      * minefield.h: Removed the global variable minesize (it was evil).
      * gnomine.c:   More fixes to get resizing working properly.

1999-01-01  Callum McKenzie <callum@physics.otago.ac.nz>
  
        * gnomine.c (marks_changed): Call gtk_clock_start.

1999-01-01  Callum McKenzie <callum@physics.otago.ac.nz>

	* gnomine.c (marks_changed): Call gtk_clock_start.

1998-11-28  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>
